--- a/gestor/templates/base.html
+++ b/gestor/templates/base.html
@@ -1,6 +1,9 @@
 {% load staticfiles %}
 
-{# Display a form #}
+<!doctype html>
+<html lang="es">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <html>
 <head>
@@ -11,32 +14,24 @@
         crossorigin="anonymous"
     >
 
-    <script 
-       src="https://code.jquery.com/jquery-3.3.1.min.js"
-       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-       crossorigin="anonymous"
-    ></script>
-    <script 
-    	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" 
-        integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" 
-    	crossorigin="anonymous"
-    </script>
-    <script
-        src=https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js
-        integrity=sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm
-        crossorigin=anonymous
-    ></script>
 
     <link rel="stylesheet" href="{% static 'CSS/style.css' %}">
 </head>
 <body>
     <header>
+        <div class="container-fluid">
+            HEADER
+        </div>
     </header>
+
     <div class="container-fluid">
         {% block content %} {% endblock %}
     </div>
 
     <footer>
+        <div class="container-fluid">
+            FOOTER
+        </div>
     </footer>
 </body>
 
