empiezo con clonar cursos

--- a/gestion/templates/body.html
+++ b/gestion/templates/body.html
@@ -5,7 +5,7 @@
         <div class="container-fluid">
             <div class="row flex-xl-nowrap">
     
-                <div class="col-12 col-md-3 col-xl-2 bd-sidebar">
+                <div class="col-12 col-md-3 col-xl-2 bd-sidebar barra-lateral">
     		<h5>Gestión de Cursos</h5>
                     <nav class="">
     		    <ul class="nav flex-column">
@@ -41,7 +41,7 @@
                     </nav> 
                 </div> 
     
-                <main class="col-12 col-md-9 col-xl-8 bd-content" role="main">
+                <main class="col-12 col-md-9 col-xl-10 bd-content principal" role="main">
     
     		
     
