listo export y botones

--- a/gestion/templates/body.html
+++ b/gestion/templates/body.html
@@ -53,7 +53,7 @@
     		        {% endblock %}
                             {% if botones %}
                                 {% for boton in botones %}
-    	                            <p class="text-right">  
+    	                            <p class="text-left">  
                                         <a 
 		                            href="{{boton.destino}}"
                                             class="btn btn-primary btn-lg active {{boton.clase}}" 
