--- a/gestion/templates/multitabla.html
+++ b/gestion/templates/multitabla.html
@@ -13,6 +13,18 @@
         <div class="tabla">
             {% render_table tabla.items %}
         </div>	
+           <p class="text-right">  
+               {% for boton in tabla.botones %}
+                       <a 
+                           href="{{boton.destino}}"
+                           class="btn btn-primary btn-sm {{boton.clase}}" 
+                           role="button"
+                           aria-pressed="true"
+                       >
+                           {{boton.texto}}
+                       </a>
+               {% endfor %}
+           </p>
 
         {% if tabla.subtabla %}
 	   <h5>
