un poco de front end

--- a/gestion/templates/body.html
+++ b/gestion/templates/body.html
@@ -6,8 +6,10 @@
             <div class="row flex-xl-nowrap">
     
                 <div class="col-12 col-md-3 col-xl-2 bd-sidebar barra-lateral">
-    		<h5>Gestión de Cursos</h5>
-                    <nav class="">
+    		<h5 class="titulo" >
+		   Gestión de Cursos
+		</h5>
+                    <nav class="navegacion">
     		    <ul class="nav flex-column">
     		        <li class="nav-item">
     			    <a
