--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -8,26 +8,41 @@ body,
 .row{
 	/*height:100%;*/
 }
+section header{
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
 .barra-lateral{
 	/*height:100%;*/
 	/*background: #dedede;*/
 }
+.barra-lateral .titulo{
+	padding-top:50px;
+}
+.barra-lateral .navegacion{
+	padding-top:30px;
+}
+.barra-lateral .navegacion .nav-item{
+    padding: 5px 0;
+    border-top:1px solid #dedede;
+}
 .botones{
-	margin:20px 0;
+    border-top:1px solid #dedede;
+	padding:20px 0;
 }
 .bd-content{
 	border-left: 1px solid #dedede;
 }
 .tabla{
-	margin-bottom:20px;
+	margin-bottom:10px;
 }
 th a{
 	color: #000;
 }
 article{
-	padding-top:60px;
-	padding-bottom:20px;
-    border-bottom:1px solid #dedede;
+	padding-top:30px;
+	padding-bottom:40px;
+    border-top:1px solid #dedede;
     }
 .ok.jumbotron{
 	margin:50px
