agrego inscripto form

--- a/gestion/templates/body.html
+++ b/gestion/templates/body.html
@@ -59,7 +59,7 @@
     	                            <div class="text-left">  
                                         <a 
 		                            href="{{boton.destino}}"
-                                            class="btn btn-primary btn-lg active {{boton.clase}}" 
+                                            class="btn btn-primary btn-lg {{boton.clase}}" 
 			                    role="button"
 			                    aria-pressed="true"
 			                >
