--- a/gestion/templates/curso.html
+++ b/gestion/templates/curso.html
@@ -6,7 +6,7 @@
             {% csrf_token %}
             {% bootstrap_form form %}
             {% buttons %}
-                <button type=submit class=btn btn-primary>Submit</button>
+                <button type="submit" class="btn-lg  btn-danger">Guardar</button>
             {% endbuttons %}
         </form>
 {% endblock %}
