--- a/gestion/templates/tabla.html
+++ b/gestion/templates/tabla.html
@@ -6,7 +6,7 @@
         <article class="article">
             <div class="tabla">
                 {% render_table tabla %}
-                {% if botones %}
+                {% if tabla.botones %}
                     <div class="text-right">  
                         {% for boton in tabla.botones %}
                                 <a 
