agrego links a archivos en vista de curso

--- a/gestion/templates/curso.html
+++ b/gestion/templates/curso.html
@@ -14,7 +14,9 @@
     {% else %}
        {% for campo in campos %}
            <strong>{{ campo.nombre }}:</strong>
-	   <p>{{ campo.valor }}</p>
+	   <p>
+	       {{ campo.valor | safe }}
+	   </p>
        {% endfor %}
     {% endif %}
 </article>
